added screenshots and updated readme

--- a/assets/style.css
+++ b/assets/style.css
@@ -193,7 +193,9 @@ header {
     header {
         margin: 1rem;
     }
-
+    .forecast{
+        margin:1rem;
+    }
     button {
         display: inline;
         border-radius: 15px;
